Add stylesheet, set all stylesheet link type to text/css

--- a/index.html
+++ b/index.html
@@ -11,7 +11,8 @@
 
         <link rel="icon" type="image/png" href="media/rrLogo.png">
 
-        <link rel="stylesheet" href="css/index-styles.css">
+        <link rel="stylesheet" href="css/index-styles.css" type="text/css">
+        <link rel="stylesheet" href="css/structure.css" type="text/css">
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
