Update username in footer; rectify previous git commit mistake

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Andada+Pro&family=Zen+Kurenaido&display=swap"> 
+        <link href="https://fonts.googleapis.com/css2?family=Andada+Pro&family=Zen+Kurenaido&display=swap" rel="stylesheet"> 
 
         <title>reciperack</title>
     </head>
@@ -107,7 +107,7 @@
         </section>
 
         <footer>
-            <span id="footer-span">designed and developed by <a href="https://github.com/silverwish" target="_blank">silverwish</a></span>
+            <span id="footer-span">designed and developed by <a href="https://github.com/j-mcQueen" target="_blank">j-mcQueen</a></span>
         </footer>
     </body>
 </html>
